# RusTorch

./: .gitattributes  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUSTORCH_DELIVERABLE_REPORT.md  TUTORIAL.md
.devcontainer/: devcontainer.json  start-demo.sh
.github/workflows/: ci.yml  publish.yml
demo_visual/: Cargo.toml  benchmark_matmul.py  benchmark_small.py  ci_regression.py  debug_comparison.py  debug_step.py  demo_benchmark.py  speed_ratio_history.csv  speed_sweep.py
demo_visual/monitor/: compare.py  debug_weights.py  init_data.json  monitor_torch.py  rust_log.jsonl  torch_log.jsonl
demo_visual/src/: main.rs
examples/: README.md
rus-torch/: Cargo.toml
rustorch-core/: Cargo.toml
rustorch-core/benches/: matmul_bench.rs
rustorch-core/examples/: jit_demo.rs
rustorch-core/src/: autograd.rs  broadcast.rs  graph.rs  jit.rs  lib.rs  ops.rs  optimizer.rs  storage.rs  tensor.rs
rustorch-core/src/backend/: adam.wgsl  contiguous.wgsl  elementwise.wgsl  elementwise_vec4.wgsl  matmul.wgsl  mod.rs  reduce.wgsl  wgpu.rs
rustorch-core/src/ops/: activations.rs  conv.rs  embedding.rs  norm.rs  pool.rs  view.rs
rustorch-core/tests/: autograd_test.rs
rustorch-cuda/: Cargo.toml
rustorch-cuda/src/: lib.rs
rustorch-metal/: Cargo.toml
rustorch-metal/src/: lib.rs
rustorch-nn/: Cargo.toml
rustorch-nn/examples/: advanced_ops.rs  conv_test.rs  full_training_demo.rs  linear_regression.rs  serialization.rs  tracing.rs
rustorch-nn/src/: activations.rs  conv.rs  data.rs  distributed.rs  dropout.rs  embedding.rs  init.rs  lib.rs  linear.rs  loss.rs  module.rs  norm.rs  optim.rs  pool.rs  rnn.rs  transformer.rs
rustorch-pytorch/: Cargo.toml
rustorch-pytorch/src/: lib.rs
rustorch-text/: Cargo.toml
rustorch-text/src/: lib.rs
rustorch-vision/: Cargo.toml
rustorch-vision/src/: datasets.rs  lib.rs  models.rs  transforms.rs
rustorch-vulkan/: Cargo.toml
rustorch-vulkan/src/: lib.rs
rustorch-wasm/: Cargo.toml
rustorch-wasm/src/: lib.rs
rustorch-wgpu/: Cargo.toml
rustorch-wgpu/src/: lib.rs
