[package]
name = "demo_visual"
version = "0.1.2"
edition = "2021"

[dependencies]
rustorch-core = { path = "../rustorch-core", features = ["wgpu_backend"] }
rustorch-nn = { path = "../rustorch-nn", features = ["wgpu_backend"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rand = "0.8"
open = "5.0"
wgpu = "0.19.4"
bytemuck = "1.25.0"

[features]
default = ["wgpu_backend"]
wgpu_backend = []
