[package]
name = "rustorch-cuda"
version = "0.1.2"
edition = "2021"
authors = ["Trae AI <trae@example.com>"]
description = "CUDA kernels and bindings for RusTorch"
license = "MIT OR Apache-2.0"

[dependencies]
cudarc = { version = "0.9", features = ["driver", "nvrtc"] }
thiserror = "1.0"

[features]
default = []
